--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="Minecraft.html">Minecraft</a>
     <a href="login.html">登录</a>
     <a href="comic.html">漫画</a>
-    <a herf="liruili01234/index.html">站长的个人主页</a>
+    <a herf="./liruili01234/index.html">站长的个人主页</a>
   </nav>
 
   <main>
