--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
     <a href="Minecraft.html">Minecraft</a>
     <a href="login.html">登录</a>
     <a href="comic.html">漫画</a>
-    <a herf="https://qiyibaoshe.github.io/liruili01234/index.html">站长的个人主页</a>
   </nav>
 
   <main>
     <h2>最新消息</h2>
-    
+
+    <article>
+      <h3>站长的个人主页</h3>
+      <p><a href="https://qiyibaoshe.github.io/liruili01234/index.html">点击查看</a></p>
+    </article>
+      
     <article>
       <h3>标题2</h3>
       <p><a href="wenzhang">点击查看</a></p>
